--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = stroopwafl
 
 ### Optional ###
-# requirements = fastcore pandas
-# dev_requirements = 
+requirements = fastcore pandas numpy pytorch torchvision matplotlib
+dev_requirements = nbdev
 # console_scripts =
