--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = stroopwafl
 
 ### Optional ###
-requirements = fastcore pandas numpy torch torchvision matplotlib
+requirements = fastcore pandas numpy torch torchvision matplotlib huggingface datasets
 dev_requirements = nbdev
 # console_scripts =
