replaced tqdm with fastprogress for progress bar tracking in learner; updated settings.ini with new package

--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = stroopwafl
 
 ### Optional ###
-requirements = fastcore pandas numpy torch torchvision torcheval matplotlib huggingface datasets
+requirements = fastcore pandas numpy torch torchvision torcheval matplotlib huggingface datasets fastprogress
 dev_requirements = nbdev
 # console_scripts =
